Fixed InputNumber Icon alignment

--- a/src/components/InputNumber/InputNumber.module.css
+++ b/src/components/InputNumber/InputNumber.module.css
@@ -1,5 +1,6 @@
 .sbui-inputnumber-container {
   @apply relative;
+  display: flex;
 }
 
 .sbui-inputnumber {
@@ -15,8 +16,6 @@
   transition: box-shadow 0.3s ease-in-out;
 
   -moz-appearance: textfield;
-  float: left;
-  display: block;
 }
 
 .sbui-inputnumber::-webkit-inner-spin-button,
@@ -44,8 +43,6 @@
 
 .sbui-inputnumber-nav {
   @apply hidden;
-  float: left;
-  position: relative;
 }
 
 .sbui-inputnumber:focus + .sbui-inputnumber-nav {
